@@ -12,8 +12,8 @@ NULL=
 
 bindir=	${exec_prefix}/${BINSUBDIR}
 bin_PROGRAMS=	sntp
-#run_ag=         cd $(srcdir) && autogen -L $(top_srcdir)/include
-run_ag=         cd $(srcdir) && autogen
+#run_ag=	cd $(srcdir) && autogen -L $(top_srcdir)/include
+run_ag=		cd $(srcdir) && autogen --writable
 
 SUBDIRS=
 if NEED_LIBOPTS
